<resources>
    <string name="app_name">Puja Traders</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="logout">Logout</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_order">Order</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="addQuantity">Add quantity</string>
    <string name="MyCartList">My Cart List</string>
    <string name="fillform">Submit your details</string>
    <string name="search">Search</string>
    <string name="tagline">तपाइको संतुस्तीनै हाम्रो धर्म हो !</string>



</resources>
